--- a/25_1_1_SQL_with_a_relational_database.ipynb
+++ b/25_1_1_SQL_with_a_relational_database.ipynb
@@ -6,7 +6,7 @@
       "name": "25-1.1 SQL with a relational database",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN/I+Mt9kf7xbLUNweZH+K+",
+      "authorship_tag": "ABX9TyPw+B8NBXxzSK2I5f8n4+sC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,7 +93,7 @@
         "id": "ooTiqrigNQG7"
       },
       "source": [
-        "conn = psycopg2.connect(\"dbname='fgyzziqp' user='fgyzziqp' host='dumbo.db.elephantsql.com' password='CMzjYfJpZTr9fX0tMzTmBoEyfyAMIegQ'\")\n"
+        "conn = psycopg2.connect(\"dbname='fgyzziqp' user='fgyzziqp' host='dumbo.db.elephantsql.com' password='CMzjYfJxxxxxx'\n"
       ],
       "execution_count": 18,
       "outputs": []
